--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -144,6 +144,12 @@ a:hover {
   text-align: center;
 }
 
+.profile-pic {
+  width:300px;
+  height:300px;
+  object-fit:cover;
+}
+
 /*
   Portfolio section
 */
