--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -144,6 +144,15 @@ a:hover {
   text-align: center;
 }
 
+.row{
+  width:300px;
+  height:300px;
+  background-image: url( https://images.unsplash.com/photo-1563805042-7684c019e1cb);
+  background-size:cover;
+  background-position:center;
+  border-radius:50%;
+}
+
 /*
   Portfolio section
 */
