--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -144,6 +144,13 @@ a:hover {
   text-align: center;
 }
 
+.center-pp {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
 /*
   Portfolio section
 */
