--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -148,7 +148,8 @@ a:hover {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  width: 100%;
+  width: 75%;
+  height: 75%;
 }
 
 /*
