--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -144,6 +144,12 @@ a:hover {
   text-align: center;
 }
 
+.pp {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 /*
   Portfolio section
 */
