--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -145,12 +145,9 @@ a:hover {
 }
 
 .pp {
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-  max-width: 400;
-  width: auto;
-  padding: 20px 20px 20px 20px;
+  vertical-align: middle;
+  width: 40%;
+  height: 40%
 }
 
 /*
