--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -145,9 +145,9 @@ a:hover {
 }
 
 .pp {
-  vertical-align: middle;
-  width: 40%;
-  height: 40%
+  align-content: middle;
+  width: 50%;
+  height: 60%
 }
 
 /*
