--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -145,10 +145,13 @@ a:hover {
 }
 
 .pp {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
   padding-left: 50px;
   padding-right: 50px;
-  width: 90%;
-  height: 90%
+  width: 100%;
+  height: 100%
 }
 
 /*
