--- a/css/templatemo-style.css
+++ b/css/templatemo-style.css
@@ -173,7 +173,7 @@ a:hover {
   height: 220px;
   font-size: 2rem;
   padding: 70px 95px;
-  display: flex;
+  display: block;
   align-items: center;
   text-align: center;
 }
